[project]
name = "yatorrent"
version = "0.1.0"
description = "YaTorrent (Yet-Another-Torrent) is a python library implementing the BitTorrent protocol."
authors = [
    { name = "Juris Liepins", email = "" },
]
dependencies = ["black>=25.1.0"]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
name = "yattorrent"
version = "0.1.0"
python_requires = ">=3.13"

[tool.pdm.scripts]
yattorrent-cli = "scripts.yattorrent_cli:main"
[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
]
